# mlir

./: .gitignore  ARCHITECTURE_EXPLAINED.md  COMPILER_DESIGN_SPEC.md  DAY1_TEST_FLOW.md  EXECUTION_FRAMEWORK.md  MLIR_COMPILER_ROADMAP.md  MLIR_COMPILER_ROADMAP_COMPREHENSIVE.md  NN_COMPILER_DESIGN.md  NN_GRAMMAR.md  PROJECT_WRITEUP.md  README.md  ROADMAP.md  STRIX_TO_MLIR_ANALOGIES.md  TABLEGEN_DIALECT_GUIDE.md  TICKETS.md  TableGen.md  future_additions.txt
mlir-hello-world/: CMakeLists.txt  README.md  main.cpp
nn-mlir/: Makefile  nn-compiler  nn-opt  test_roundtrip.mlir
nn-mlir/include/NN/: NNDialect.h  NNOps.h  NNOps.td
nn-mlir/lib/Conversion/: NNToStandard.cpp
nn-mlir/lib/NN/: NNDialect.cpp  NNOps.cpp
nn-mlir/parser/: NNParser.h
nn-mlir/tests/: DEMO_COMMANDS.md  dialect_roundtrip.mlir  frontend_basic.nn  frontend_comments.nn  frontend_deep.nn  frontend_single_layer.nn  lowering_basic.mlir  test_simple.mlir
nn-mlir/tools/: mlir-api-test.cpp  nn-compiler.cpp  nn-opt.cpp
